really fix jumpy issue

--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   margin: 0 0;
   font-family: sans;
 }
@@ -40,6 +41,8 @@ header, article, section, footer, footer > div,
 }
 
 #resolution div.prefix {
+  margin: 0;
+  padding: 10px 0;
   font-size: 2em;
   text-transform: uppercase;
 }
